<resources>
    <string name="app_name">employee_lookup</string>
    <string name="action_settings">Settings</string>
    <string name="emp_name_label">Name</string>
    <string name="emp_age_label" >Age</string>
    <string name="emp_salary_label">Salary</string>
    <string name="employee_lookup_title">Employee Lookup</string>
    <string name="total_employees_label">Total Employees</string>
    <string name="employees_showing_label">Showing</string>
    <string name="employee_id_label">Id</string>
    <string name="botton_text_save">Save</string>
    <string name="button_text_delete">Delete</string>
    <string name="button_text_cancel">Cancel</string>
</resources>
