<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/employee_card_height"
    android:layout_marginBottom="2dp"
    android:divider="?attr/dividerHorizontal"
    android:paddingBottom="3dp">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/layoutEmployeeCard"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/employee_card_bg">

        <ImageView
            android:id="@+id/imageViewProfile"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/textView4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            tools:srcCompat="@tools:sample/avatars[3]" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/emp_name_label"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/textView3"
            app:layout_constraintEnd_toStartOf="@+id/textViewName"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="49dp"
            android:layout_height="21dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/emp_age_label"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/textView4"
            app:layout_constraintEnd_toStartOf="@+id/textViewAge"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="200dp"
            android:layout_marginRight="200dp"
            android:layout_marginBottom="10dp"
            android:text="@string/emp_salary_label"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <TextView
            android:id="@+id/textViewName"
            android:layout_width="173dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="9dp"
            android:layout_marginRight="9dp"
            app:layout_constraintBottom_toTopOf="@+id/textViewAge"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewAge"
            android:layout_width="173dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="21dp"
            android:layout_marginEnd="9dp"
            android:layout_marginRight="9dp"
            app:layout_constraintBottom_toTopOf="@+id/textViewSalary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewName" />

        <TextView
            android:id="@+id/textViewSalary"
            android:layout_width="173dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="26dp"
            android:layout_marginEnd="9dp"
            android:layout_marginRight="9dp"
            android:layout_marginBottom="11dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewAge" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="98dp"
            android:layout_marginEnd="2dp"
            android:layout_marginRight="2dp"
            android:text="$"
            app:layout_constraintEnd_toStartOf="@+id/textViewSalary"
            app:layout_constraintTop_toTopOf="parent" />

    </android.support.constraint.ConstraintLayout>
</LinearLayout>